Fix recaptcha settiings

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -1,6 +1,7 @@
 doctype html
 include includes/head.pug
 script(src='/assets/js/form.js')
+script(src="https://www.google.com/recaptcha/api.js" async defer)
 body
     include includes/nav.pug
     #content
