--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -27,6 +27,10 @@ head
     //- FontAwesome
     link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css' rel='stylesheet')
 
+    //- Import SWAL
+    script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
+    link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
+    
     script(src='/assets/js/main.js')
     script(src='/assets/js/cards.js')
 
