--- a/src/dynamic/user/index.pug
+++ b/src/dynamic/user/index.pug
@@ -19,5 +19,6 @@ body
                 else
                     img.icon(src=val.logo)
                 h2.title #{val.username}
+                div.right #{val.vote} Votes
                 p.desc #{val.description}
                 a.small.button(href=`/bots/${val.botid}`) View Bot
