--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -41,7 +41,7 @@ body
                     span Offline
         .right.summary(style='margin: 10px;') #{bot.description}
         .right.buttons-case(style='display: inline;')
-            a.bot-btns.button(target='_blank' href=`https://discord.com/oauth2/authorize?client_id=${bot.botid}&scope=bot&permissions=8`)
+            a.bot-btns.button(target='_blank' href=bot.invite ? bot.invite : `https://discord.com/oauth2/authorize?client_id=${bot.botid}&scope=bot&permissions=0`)
                 | Invite
             a.bot-btns.button(target='_blank' href=`/bots/vote/${bot.botid}`) Vote
             a.bot-btns.button(target='_blank' href=`/api/embed/${bot.botid}`) Embed
