Reset the recaptcha after form submit

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -34,7 +34,7 @@ body
                 input#owners.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
-            .center-inline.g-recaptcha(data-callback='grecaptcha' data-sitekey=site_key data-theme=theme)
+            .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
             a.button(onclick='submit()') Submit
             br
         br
