--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -38,7 +38,7 @@ body(onload="load()")
             input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.slice(1).join(" ")) disabled)
             .placeholder Only the primary owner can edit additional owners
         br
-        .center-inline.g-recaptcha(data-callback='grecaptcha' data-sitekey=site_key data-theme=theme)
+        .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
         a.button(onclick='submit()') Submit
         br
       hr
