--- a/src/dynamic/vote.pug
+++ b/src/dynamic/vote.pug
@@ -5,7 +5,7 @@ body
     include includes/nav.pug
     #content
         #cards
-            div.votec.card
+            div.vote.card
                 if (bot.nsfw)
                     img.icon.nsfw(src=val.logo)
                 else
