--- a/src/dynamic/includes/head.pug
+++ b/src/dynamic/includes/head.pug
@@ -34,7 +34,7 @@ head
     if (isBotEditPage)
         script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
         link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
-    if (isBotVotePage)
+    if (isBotLikePage)
         script(src='https://cdn.jsdelivr.net/npm/sweetalert2@9')
         link(href='https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css' rel='stylesheet')
 
