--- a/src/dynamic/includes/nav.pug
+++ b/src/dynamic/includes/nav.pug
@@ -5,7 +5,7 @@
         a(href="/")
             span.navtext.keep Discord Bot List
         include arrow.pug
-        if (isBotInfoPage || isBotVotePage) 
+        if (isBotInfoPage || isBotLikePage) 
             a(href=`/bots/${bot.botid}`)
                 span.navtext #{bot.username}
             include arrow.pug
