Add Fields [Support Server, Website, Github Repo]

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -31,6 +31,18 @@ body
                 .textarea-placeholder Description
             br
             .input-holder
+                input#support.input(type='text' placeholder=' ')
+                .placeholder Bot Support Server
+            br
+            .input-holder
+                input#website.input(type='text' placeholder=' ')
+                .placeholder Bot Website Server
+            br
+            .input-holder
+                input#github.input(type='text' placeholder=' ')
+                .placeholder Github Repository
+            br
+            .input-holder
                 input#owners.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
