--- a/src/dynamic/bots.pug
+++ b/src/dynamic/bots.pug
@@ -42,6 +42,12 @@ body
                 | Invite
             a.bot-btns.button(href=`/bots/like/${bot.botid}`) Like
             a.bot-btns.button(target='_blank' href=`/api/embed/${bot.botid}`) Embed
+            if (bot.support)
+                a.bot-btns.button(target='_blank' href=`${bot.support}`) Support Server
+            if (bot.website)
+                a.bot-btns.button(target='_blank' href=`${bot.website}`) Website
+            if (bot.github)
+                a.bot-btns.button(target='_blank' href=`${bot.github}`) Github
         if (isUrl)
             #long.isurl !{desc}
         else
