--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -36,7 +36,7 @@ body
             br
             .input-holder
                 input#website.input(type='text' placeholder=' ')
-                .placeholder Bot Website Server
+                .placeholder Bot Website
             br
             .input-holder
                 input#github.input(type='text' placeholder=' ')
