--- a/src/dynamic/like.pug
+++ b/src/dynamic/like.pug
@@ -12,7 +12,7 @@ body
                     img.icon(src=bot.logo)
                 h2.title #{bot.username}
 
-                p.cc You can like every 12 hour 
+                p You can like every 12 hour 
                 a.small.button()#like Like
                 p#likes(style='display: none;') #{`${bot.likes || 0} Likes`}
         br
