--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -34,7 +34,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #888;
+  color: var(--text-secondary);
   transition: 0.2s color;
 }
 
@@ -142,14 +142,14 @@ h2 {
 .card {
   padding: 20px;
   height: 375px;
-  box-shadow: 0 0 4px 0.5px #888888;
+  box-shadow: 0 0 4px 0.5px var(--text-secondary);
   margin: 20px;
   display: inline-block;
   width: calc(100vw / 4);
   transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s;
 }
 .card:hover {
-  box-shadow: 0 0 12px 0.5px #888888;
+  box-shadow: 0 0 12px 0.5px var(--text-secondary);
   transform: translateY(-0.30em);
 }
 .large {
@@ -171,13 +171,23 @@ h2 {
   bottom: 0 !important;
 }
 
-.fa-heart {
-  padding: 0 5px;
+.small-link {
+  padding: 5px 5px;
+  margin: 0 5px;
 }
 
-.cc {
-	color: #cfcfcf;
-	min-height: 50px;
+.small-link:after {
+  content: "•";
+  position: relative;
+  left: 10px;
+}
+
+.small-link:last-child:after {
+  content: ""
+}
+
+.fa-heart {
+  padding: 0 5px;
 }
 
 .icon {
@@ -187,7 +197,7 @@ h2 {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  box-shadow: 0 0 4px 0.5px #888888;
+  box-shadow: 0 0 4px 0.5px var(--text-secondary);
 }
 
 .card a {
@@ -238,9 +248,15 @@ h2 {
 #img-holder {
   float: left;
   border-radius: 20px;
-  width: 180px;
+  width: 250px;
   margin: 0 50px;
   background-color: var(--background-2);
+}
+
+.right {
+  color: var(--text-secondary);
+  width: min-content;
+  float: left;
 }
 
 #bot-icon {
@@ -256,10 +272,13 @@ h2 {
 }
 
 #long {
+  display: block;
+  width: calc(100% - 116px);
   background-color: var(--background-2);
   word-wrap: break-word;
   padding: 1px 15px;
   margin: 80px 50px;
+  float: left;
 }
 
 .isurl {
@@ -291,10 +310,6 @@ h2 {
   border-radius: 50%;
   font-size: 20px;
   margin-right: 5px;
-}
-
-.right {
-  color: #888888;
 }
 
 code {
@@ -396,7 +411,7 @@ code {
   font-size: 16px;
   padding: 13px 15px;
   border-radius: 4px;
-  border: 1px solid #888;
+  border: 1px solid var(--text-secondary);
   width: calc(100% - 30px);
   outline: none;
   background-color: rgba(0, 0, 0, 0);
@@ -407,7 +422,7 @@ code {
 
 .input:not(:placeholder-shown).input:not(:focus) + .placeholder {
   transform: scale(0.75) translateY(-39px) translateX(-5px);
-  color: #888;
+  color: var(--text-secondary);
   z-index: 10 !important;
 }
 
@@ -440,7 +455,7 @@ code {
   background-color: var(--background-color);
   transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #888;
+  color: var(--text-secondary);
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -463,7 +478,7 @@ textarea {
   top: -8px;
   left: 8px;
   font-size: 11.25px;
-  color: #888;
+  color: var(--text-secondary);
   padding: 0 8px;
   background-color: var(--background-color);
   user-select: none;
@@ -478,8 +493,8 @@ textarea {
 hr {
   width: 80%;
   height: 2px;
-  color: #888;
-  background-color: #888;
+  color: var(--text-secondary);
+  background-color: var(--text-secondary);
   margin-bottom: 20px;
   border: none;
 }
@@ -556,7 +571,7 @@ hr {
 .bot-btns {
   display: inline-block;
   margin-right: 20px;
-  width: 10%;
+  width: 100px;
 }
 
 textarea.cke_source {
@@ -564,7 +579,7 @@ textarea.cke_source {
 }
 
 .cke_editor_longdesc {
-  border: 1px solid #888 !important;
+  border: 1px solid var(--text-secondary) !important;
   border-radius: 4px !important;
   padding: 1px !important;
 }
@@ -582,7 +597,8 @@ a {
 }
 
 .summary {
-    max-width: 60%;
+    min-width: 600px;
+    margin: 10px 0;
 }
 
 .sts {
@@ -592,6 +608,7 @@ a {
 .sts span {
     margin-left: 10px; 
     display: inline-block;
+    text-transform: capitalize;
 }
 
 .online i {
@@ -607,6 +624,24 @@ a {
     color: #8c8c8c;
 }
 
+@media (max-width: 1000px) {
+  .right {
+    margin: 0 auto;
+    width: 80%;
+    float: none;
+    text-align: center;
+  }
+
+  #img-holder {
+    float: none;
+    margin: 50px auto;
+  }
+
+  .summary {
+    min-width: auto;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .half-left {
     margin-left: 0;
@@ -618,6 +653,11 @@ a {
 
   .half:after {
     left: -50%;
+  }
+  
+  .card,
+  .button {
+    width: calc(100% - 80px);
   }
 
   .half:hover:after {
@@ -639,10 +679,6 @@ a {
   }
   .search {
     margin-bottom: 0;
-  }
-  .card,
-  .button {
-    width: calc(100% - 80px);
   }
 
   .buttons-case {
