Redesign the bot edit page

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -32,11 +32,11 @@ body
             br
             .input-holder
                 input#support.input(type='text' placeholder=' ')
-                .placeholder Bot Support Server
+                .placeholder Support Server
             br
             .input-holder
                 input#website.input(type='text' placeholder=' ')
-                .placeholder Bot Website
+                .placeholder Website
             br
             .input-holder
                 input#github.input(type='text' placeholder=' ')
