--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -1,59 +1,75 @@
 doctype html
 include includes/head.pug
 script(src='/assets/js/form.js')
+script(src='/assets/js/edit.js')
 script(src="https://www.google.com/recaptcha/api.js" async defer)
 body(onload="load()")
     include includes/nav.pug
     #content
       span.header
-        h1 Edit 
-        p You can edit your bot or find your bot auth details below.
+        h1 Edit
       br
-      form.center
-        .input-holder
-          input#botid.input(type='text' placeholder=' ' value=bot.botid readonly='')
-          .placeholder Client ID
-        br
-        .input-holder
-          input#prefix.input(type='text' placeholder=' ' value=bot.prefix)
-          .placeholder Prefix
-        br
-        .input-holder
-          input#description.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
-          .placeholder Summary
-        br
-        .input-holder
-          input#invite.input(type='text' placeholder=' ' value=bot.invite)
-          .placeholder Custom Invite
-        br
-        .input-holder
-          textarea#longdesc.input(rows='7') #{bot.long}
-          .textarea-placeholder Description
-        br
-        .input-holder
-          input#support.input(type='text' placeholder=' ' value=bot.support)
-          .placeholder Bot Support Server
-        br
-        .input-holder
-          input#website.input(type='text' placeholder=' ' value=bot.website)
-          .placeholder Bot Website
-        br
-        .input-holder
-          input#github.input(type='text' placeholder=' ' value=bot.github)
-          .placeholder Github Repository
-        br
-        .input-holder
-          if (bot.owners.primary == user.id)
-            input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.additional.join(" ")))
-            .placeholder Additional Owner IDs
-          else
-            input#owners.input.xinput(type='text' placeholder=' ' value=String(bot.owners.additional.join(" ")) disabled)
-            .placeholder Only the primary owner can edit additional owners
-        br
-        .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
-        a.button(onclick='submit()') Submit
-        br
-      hr
-      span.center
-        a#auth(style='margin-right: 10px;') Authorization token
-        a#reset Reset Authorization token
+      .sidebar
+        a.link(href="##edit") Edit Details
+        a.link(href="##links") Change Links
+        a.link(href="##server-count") Server count
+        a.link(href="##manage") Manage Bot
+      .main-section
+        #edit.section
+          form.center
+            .input-holder
+              input#botid.input(type='text' placeholder=' ' value=bot.botid readonly='')
+              .placeholder Client ID
+            br
+            .input-holder
+              input#prefix.input(type='text' placeholder=' ' value=bot.prefix)
+              .placeholder Prefix
+            br
+            .input-holder
+              input#description.input(maxlength='120' type='text' placeholder=' ' value=bot.description)
+              .placeholder Summary
+            br
+            .input-holder
+              textarea#longdesc.input(rows='7') #{bot.long}
+              .textarea-placeholder Description
+            br
+            .input-holder
+              if (bot.owners.primary == user.id)
+                input#owner-ids.input.xinput(type='text' placeholder=' ' value=String(bot.owners.additional.join(" ")))
+                .placeholder Additional Owner IDs
+              else
+                input#owner-ids.input.xinput(type='text' placeholder=' ' value=String(bot.owners.additional.join(" ")) disabled)
+                .placeholder Only the primary owner can edit additional owners
+            br
+            .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
+            a.button(onclick='submit()') Submit
+            br
+        #links.section
+          form.center
+            .input-holder
+              input#invite.input(type='text' placeholder=' ' value=bot.invite)
+              .placeholder Custom Invite
+            br
+            .input-holder
+              input#support.input(type='text' placeholder=' ' value=bot.support)
+              .placeholder Support Server
+            br
+            .input-holder
+              input#website.input(type='text' placeholder=' ' value=bot.website)
+              .placeholder Website
+            br
+            .input-holder
+              input#github.input(type='text' placeholder=' ' value=bot.github)
+              .placeholder Github Repository
+            br
+            .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
+            a.button(onclick='submit()') Submit
+            br
+
+        #server-count.section
+          span
+            a#auth.mini-btn.button Get Authorization token
+            a#reset.mini-btn.button Reset Authorization token
+        
+        #managee
+          a.mini-btn.button.button-red.delete(href="#confirm" data-id=bot.botid data-name=bot.username) Delete Bot
