--- a/src/dynamic/resubmit.pug
+++ b/src/dynamic/resubmit.pug
@@ -33,11 +33,11 @@ body
         br
         .input-holder
           input#support.input(type='text' placeholder=' ' value=bot.support)
-          .placeholder Bot Support Server
+          .placeholder Support Server
         br
         .input-holder
           input#website.input(type='text' placeholder=' ' value=bot.website)
-          .placeholder Bot Website
+          .placeholder Website
         br
         .input-holder
           input#github.input(type='text' placeholder=' ' value=bot.github)
