--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -71,5 +71,5 @@ body(onload="load()")
             a#auth.mini-btn.button Get Authorization token
             a#reset.mini-btn.button Reset Authorization token
         
-        #managee
+        #manage.section
           a.mini-btn.button.button-red.delete(href="#confirm" data-id=bot.botid data-name=bot.username) Delete Bot
