Fix bug --> src/dynamic/edit.pug

--- a/src/dynamic/edit.pug
+++ b/src/dynamic/edit.pug
@@ -39,10 +39,14 @@ body(onload="load()")
             br
             .input-holder
               select(multiple)#tags
-                each tag in tags
-                  each sel in bot.tags
-                    option(selected='') #{sel}
-                  option #{tag}
+                if (!bot.tags)
+                  each tag in tags
+                    option #{tag}
+                else
+                  each tag in tags
+                    each sel in bot.tags
+                      option(selected='') #{sel}
+                    option #{tag}
               .placeholder Bot Tags
             br
             .input-holder
