Fix owner ids missing bug

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -43,7 +43,7 @@ body
                 .placeholder Github Repository
             br
             .input-holder
-                input#owners.input.xinput(type='text' placeholder=' ')
+                input#owner-ids.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
             .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
