Change bot add page styling

--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -9,7 +9,7 @@ body
             h1 Add your bot
             p Fill in these details and hit that button. Make sure you&apos;re in the server.
         br
-        form.center
+        form.center.more-padding
             .input-holder
                 input#botid.input(type='text' placeholder=' ')
                 .placeholder Client ID
