--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -13,7 +13,7 @@ body
             h1 Add your bot
             p Fill in these details and hit that button. Make sure you&apos;re in the server.
         br
-        form.center.more-padding
+        form.center
             .input-holder
                 input#botid.input(type='text' placeholder=' ')
                 .placeholder Client ID
@@ -35,6 +35,25 @@ body
                 .textarea-placeholder Description
             br
             .input-holder
+                input#support.input(type='text' placeholder=' ')
+                .placeholder Support Server
+            br
+            .input-holder
+                input#website.input(type='text' placeholder=' ')
+                .placeholder Website
+            br
+            .input-holder
+                input#github.input(type='text' placeholder=' ')
+                .placeholder Github Repository
+            br
+            .input-holder
+                select(multiple)#tags
+                    each tag in tags
+                        option #{tag}
+                .placeholder Bot Tags
+            br
+            .input-holder
+                input#owners.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
             .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
