--- a/src/dynamic/add.pug
+++ b/src/dynamic/add.pug
@@ -2,14 +2,18 @@ doctype html
 include includes/head.pug
 script(src='/assets/js/form.js')
 script(src="https://www.google.com/recaptcha/api.js" async defer)
+script(src='https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js')
+link(href='/assets/css/tag.css' rel='stylesheet')
+
 body
     include includes/nav.pug
+    p#count(style='display: none;') #{count}
     #content
         span.header
             h1 Add your bot
             p Fill in these details and hit that button. Make sure you&apos;re in the server.
         br
-        form.center.more-padding
+        form.center
             .input-holder
                 input#botid.input(type='text' placeholder=' ')
                 .placeholder Client ID
@@ -31,7 +35,25 @@ body
                 .textarea-placeholder Description
             br
             .input-holder
-                input#owner-ids.input.xinput(type='text' placeholder=' ')
+                input#support.input(type='text' placeholder=' ')
+                .placeholder Support Server
+            br
+            .input-holder
+                input#website.input(type='text' placeholder=' ')
+                .placeholder Website
+            br
+            .input-holder
+                input#github.input(type='text' placeholder=' ')
+                .placeholder Github Repository
+            br
+            .input-holder
+                select(multiple)#tags
+                    each tag in tags
+                        option #{tag}
+                .placeholder Bot Tags
+            br
+            .input-holder
+                input#owners.input.xinput(type='text' placeholder=' ')
                 .placeholder Additional Owner IDs
             br
             .center-inline.g-recaptcha(data-callback='update_token' data-sitekey=site_key data-theme=theme)
