--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -416,6 +416,7 @@ code {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.26);
   color: var(--primary);
   border-color: var(--primary);
+  border-radius: 4px;
   display: block;
   margin: 8px auto;
   text-align: center;
