--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -237,6 +237,10 @@ h2 {
   left: 10px;
 }
 
+.small-link:hover:after {
+  color: var(--text-secondary);
+}
+
 .small-link:last-child:after {
   content: ""
 }
@@ -731,6 +735,66 @@ a {
 .more-padding {
   padding: 0 60px;
   width: calc(100% - 120px);
+}
+
+.tags {
+  list-style: none;
+  margin: 20px 0 0 0;
+  overflow: hidden; 
+  padding: 0;
+}
+
+.tags li {
+  float: left; 
+}
+
+.bot-tag {
+  background: var(--background-2);
+  border-radius: 3px 0 0 3px;
+  color: var(--color);
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+  transition: 400ms ease all;
+}
+
+.bot-tag::before {
+  background: var(--background-2);
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px;
+  transition: 400ms ease all;
+}
+
+.bot-tag::after {
+  background: var(--background-color);
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid var(--background-2);
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 400ms ease all;
+}
+
+.bot-tag:hover {
+  background-color: var(--primary);
+  color: var(--background-color);
+}
+
+.bot-tag:hover::after {
+   border-left-color: var(--primary); 
 }
 
 @media (max-width: 1000px) {
